fix: Prevent horizontal scrolling

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -22,6 +22,11 @@
   }
 }
 
+swiper-container {
+  overflow-x: hidden;
+}
+
+
 @media only screen and (min-width: 1024px) {
   ion-searchbar {
     width: 30%;
